tests/baselines/reference/unusedTypeParameters10.errors.txt
tests/cases/compiler/unusedTypeParameters10.ts(1,12): error TS6133: 'T' is declared but never used.


==== tests/cases/compiler/unusedTypeParameters10.ts (1 errors) ====
    type Alias<T> = { };
               ~
!!! error TS6133: 'T' is declared but never used.
    type Alias2<T> = { x: T };
    